--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,11 @@ plugins {
 
 android {
     compileSdk 32
-
+    testOptions{
+        unitTests{
+            includeAndroidResources = true;
+        }
+    }
     defaultConfig {
         applicationId "edu.ucsd.cse110.zooseeker46"
         minSdk 28
@@ -32,7 +36,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'junit:junit:4.+'
+    testImplementation 'androidx.test:core:1.4.0'
+    testImplementation 'androidx.test.ext:junit:1.1.3'
+    testImplementation 'org.robolectric:robolectric:4.7.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
