--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ZooSeeker46">
         <activity
-            android:name=".SearchActivity"
+            android:name=".search.SearchActivity"
             android:exported="false" />
         <activity
-            android:name=".PlanActivity"
+            android:name=".plan.PlanActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
