--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ZooSeeker46">
         <activity
-            android:name=".directions.DirectionsActivity"
+            android:name=".DirectionsV2Activity"
             android:exported="false" />
         <activity
 
@@ -18,6 +18,9 @@
             android:exported="false" />
         <activity
             android:name=".plan.PlanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DirectionsActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
