--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha05'
     androidTestImplementation 'androidx.test:rules:1.4.1-alpha06'
 
+    implementation "com.google.guava:guava:16+"
+    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
+
     def gson_version = "2.9.0"
     def room_version = "2.4.2"
     def jgrapht_version = "1.5.0"
